// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <legend
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            >
              <div
                class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl3"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_1_"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="_r_1_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl3"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_4_"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="_r_4_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <legend
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u3v uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            >
              <div
                class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl3"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_8_"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="_r_8_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl3"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_b_"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="_r_b_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
